finished primary screens, added most of brand kit

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,8 @@
 
 :root {
   --woodsmoke-50: #f6f6f6;
+  --woodsmoke-100: #988686;
+  --woodsmoke-400: #888888;
   --woodsmoke-800: #454545;
   --woodsmoke-950: #1a1a1a;
   --snow-flurry-200: #c3ff97;
