finished home page + foreground tap page

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,8 +4,9 @@
 
 :root {
   --woodsmoke-50: #f6f6f6;
-  --woodsmoke-100: #988686;
+  --woodsmoke-100: #e7e7e7;
   --woodsmoke-400: #888888;
+  --woodsmoke-700: #4f4f4f;
   --woodsmoke-800: #454545;
   --woodsmoke-950: #1a1a1a;
   --snow-flurry-200: #c3ff97;
