added reveal button to homescreen

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@
   --woodsmoke-400: #888888;
   --woodsmoke-700: #4f4f4f;
   --woodsmoke-800: #454545;
+  --woodsmoke-900: #282828;
   --woodsmoke-950: #1a1a1a;
   --snow-flurry-200: #c3ff97;
 }
